# hm-config

./: .gitignore  Justfile  default.nix  home.nix  shell.nix  sources.nix
files/cargo-templates/leptos/: Cargo.toml
files/cargo-templates/leptos/src/: main.rs
files/cargo-templates/leptos/src/app/: mod.rs
files/config/: starship.toml
files/gpg-keyring/deuxfleurs/: adrien.gpg  boris.gpg  lx.gpg  maximilien.gpg  quentin.gpg  trinity-1686a.gpg  (+1 more)
hosts/: default.nix
hosts/kira/: home.nix  programs.nix  services.nix
modules/: all-modules.nix  default.nix  programs.nix  services.nix
modules/generic/: all-modules.nix  default.nix
modules/lib/: package.nix  python.nix
modules/misc/: catppuccin.nix  deuxfleurs.nix  files.nix  home.nix  music.nix  nix.nix  nixpkgs.nix  opengl.nix  packages.nix  secrets.nix  systemd.nix
modules/programs/: aura.nix  bat.nix  bpython.nix  discord.nix  element.nix  eza.nix  fd.nix  ferdium.nix  fish.nix  gh.nix  git.nix  gitui.nix  glab.nix  glances.nix  glow.nix  gpg.nix  hyfetch.nix  imhex.nix  kitty.nix  lan-mouse.nix  litecli.nix  mise.nix  mux.nix  neovim.nix  nix-init.nix  nvchecker.nix  obsidian.nix  paru.nix  password-store.nix  pgcli.nix  powerline.nix  ptpython.nix  rust.nix  sccache.nix  silicon.nix  ssh.nix  starship.nix  szurubooru-cli.nix  taplo.nix  tmux.nix  (+5 more)
modules/services/: aria2.nix  gpg-agent.nix  kubo.nix  nix-web.nix  podman.nix  pueue.nix  sccache.nix  solaar.nix  syncthing.nix
nix/: default.nix  sources-nur.json  sources.json
npins/: sources.json
npins/channels/: sources.json
npins/nur/: sources.json
pkgs/: default.nix  lix.nix  overrides.nix  rust.nix  top-level.nix
pkgs/applications/: default.nix
pkgs/kiwi-packages/: default.nix
pkgs/lib/: default.nix  version.nix
pkgs/libs/: default.nix
pkgs/patches/: imhex.patch
pkgs/tools/: default.nix
scripts/: duplicate-checker.nix  update-checker.nix  update.nix
(+219 files in other folders)
